--- a/NewRide.html
+++ b/NewRide.html
@@ -6,6 +6,8 @@
     <title>Proyecto 01</title>
     <link rel="stylesheet" href="CSS/stylesnewRide.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <script src="JS/app.js"></script>
+    <script src="JS/newRide.js"></script>
 
 
 </head>
@@ -70,9 +72,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="seats" id="seats">Seats</label>
-                    <input type="number" id="seats" name="seats" min="1" value="2" required>
+                    <label for="seatsInput">Seats</label>
+                    <input type="number" id="seatsInput" name="seats" min="1" value="2" required>
                 </div>
+
 
                 <div class="form-group">
                     <label for="fee">Fee</label>
@@ -107,8 +110,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="arrive">Year</label>
-                        <input type="number" id="arrive" name="arrive" min="1" value="2020" required>
+                        <label for="year">Year</label>
+                        <input type="number" id="year" name="year" min="1" value="2020" required>
+
 
                     </div>
                 </div>
