--- a/myRides.html
+++ b/myRides.html
@@ -6,6 +6,8 @@
     <title>Proyecto 01</title>
     <link rel="stylesheet" href="CSS/stylesRides.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="JS/app.js"></script>
+    <script src="JS/LoadMyRides.js"></script>
 
 </head>
 
@@ -52,31 +54,7 @@
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td><a href="#">Quesada</a></td>
-                <td>Alajuela</td>
-                <td>2</td>
-                <td>Nissan Pathfinder 2015</td>
-                <td>$5</td>
-                <td><a href="EditRide.html">Edit</a> | <a href="#">Delete</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">Quesada</a></td>
-                <td>Naranjo</td>
-                <td>1</td>
-                <td>Toyota Corolla 2020</td>
-                <td>$10</td>
-                <td><a href="EditRide.html">Edit</a> | <a href="#">Delete</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">Aguas Zarcas</a></td>
-                <td>Naranjo</td>
-                <td>1</td>
-                <td>Ford Festiva 1990</td>
-                <td>--</td>
-                <td><a href="EditRide.html">Edit</a> | <a href="#">Delete</a></td>
-            </tr>
+        <tbody id="rides_list">
         </tbody>
     </table>
     </main>
