--- a/bookings.html
+++ b/bookings.html
@@ -6,6 +6,7 @@
     <title>Proyecto 01</title>
     <link rel="stylesheet" href="CSS/stylesBookings.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="JS/bookings.js"></script>
 
 </head>
 
@@ -25,32 +26,22 @@
 
             <div class="accionesAdicionales">
                 <input type="text" id="search" placeholder="Search..." />
-                <img src="imagenes/usuario.png" alt="Foto perfil" class="perfil" />
+                <div class="dropdown">
+                    <img src="imagenes/usuario.png" alt="User" onclick="toggleMenu()">
+                    <div id="userMenu" class="dropdown-content">
+                        <a href="editProfile.html">Profile</a>
+                        <a href="configuration.html">Configuration</a>
+                        <a href="#" onclick="logout()">Log out</a>
+                    </div>
+                </div>
             </div>
-
-
         </nav>
     </header>
 
 
 
     <main>
-        <div id="userOptions">
-            <table id="options">
-                <tbody>
-                    <tr>
-                        <td>
-                            <a href="index.html">Logout</a>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td id="seleccionado">
-                            <a href="configuration.html">Settings</a>
-                        </td>
-                    </tr>
-            </table>
-        </div>
+        
         <h1>Bookings</h1>
 
 
@@ -59,40 +50,14 @@
 
         </div>
 
-        <table>
+        <table id="tableBookings">
             <thead>
                 <tr>
                     <th>User</th>
                     <th>Ride</th>
                     <th>Accept / Reject</th>
-
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <div class="userInfo">
-                            <img src="imagenes/usuario.png" alt="Foto perfil" class="perfil">
-                            <span class="username">Fulano</span>
-                        </div>
-                    </td>
-                    <td>Ciudad Quesada - Naranjo</td>
-                    <td><a href="#">Accept</a> | <a href="#">Reject</a></td>
-
-
-                </tr>
-                <tr>
-                    <td>
-                        <div class="userInfo">
-                            <img src="imagenes/usuario.png" alt="Foto perfil" class="perfil">
-                            <span class="username">yluna</span>
-                        </div>
-                    </td>
-                    <td>Fortuna - San José</td>
-                    <td><a href="#">Accept</a> | <a href="#">Reject</a></td>
-                </tr>
-
-            </tbody>
         </table>
 
 
