--- a/configuration.html
+++ b/configuration.html
@@ -6,7 +6,7 @@
     <title>Proyecto 01</title>
     <link rel="stylesheet" href="CSS/stylesConfiguration.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-
+    <script src="JS/configuration.js"></script>
 
 </head>
 
@@ -21,15 +21,20 @@
             <ul class="menuPrincipal">
                 <li><a href="searchRides.html">Home</a></li>
                 <li> <a href="myRides.html">Rides</a></li>
-                <li class="activo"><a href="#">Bookings</a></li>
+                <li class="activo"><a href="bookings.html">Bookings</a></li>
             </ul>
 
             <div class="accionesAdicionales">
                 <input type="text" id="search" placeholder="Search..." />
-                <img src="imagenes/usuario.png" alt="Foto perfil" class="perfil" />
+                <div class="dropdown">
+                    <img src="imagenes/usuario.png" alt="User" onclick="toggleMenu()">
+                    <div id="userMenu" class="dropdown-content">
+                        <a href="editProfile.html">Profile</a>
+                        <a href="configuration.html">Configuration</a>
+                        <a href="#" onclick="logout()">Log out</a>
+                    </div>
+                </div>
             </div>
-
-
         </nav>
     </header>
 
@@ -37,7 +42,7 @@
 
         <h1>Configuration</h1>
 
-        <form action="#" method="post" class="conf-form">
+        <form action="#" method="post" class="conf-form" id="formConfig">
             <div class="form-row">
                 <div class="form-group">
                     <label for="name">Public Name:</label>
@@ -54,7 +59,7 @@
 
             <div class="form-actions">
                 <a href="searchRides.html">Cancel</a>
-                <button type="submit" href="searchRides.html">Save</button> <!--No redirecciona ya que es un boton-->
+                <button type="submit" href="searchRides.html">Save</button> 
             </div>
 
         </form>
