--- a/editProfile.html
+++ b/editProfile.html
@@ -6,6 +6,7 @@
     <title>Proyecto 01</title>
     <link rel="stylesheet" href="CSS/stylesEditProfile.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <script src="JS/editProfile.js"></script>
 
 
 </head>
@@ -19,17 +20,22 @@
 
         <nav id="Navegacion">
             <ul class="menuPrincipal">
-                <li class="activo"><a href="searchRides.html">Home</a></li>
+                <li><a href="searchRides.html">Home</a></li>
                 <li> <a href="myRides.html">Rides</a></li>
-                <li ><a href="bookings.html">Bookings</a></li>
+                <li class="activo"><a href="bookings.html">Bookings</a></li>
             </ul>
 
             <div class="accionesAdicionales">
                 <input type="text" id="search" placeholder="Search..." />
-                <img src="imagenes/usuario.png" alt="Foto perfil" class="perfil" />
+                <div class="dropdown">
+                    <img src="imagenes/usuario.png" alt="User" onclick="toggleMenu()">
+                    <div id="userMenu" class="dropdown-content">
+                        <a href="editProfile.html">Profile</a>
+                        <a href="configuration.html">Configuration</a>
+                        <a href="#" onclick="logout()">Log out</a>
+                    </div>
+                </div>
             </div>
-
-
         </nav>
     </header>
 
@@ -37,17 +43,17 @@
 
         <h1> Edit Profile </h1>
 
-        <form action="#" method="post" class="edit-form">
+        <form action="#" method="post" class="edit-form" id="editFormUser">
 
             <div class="form-row">
 
                 <div class="form-group">
                     <label id="labelName" for="InputName"> First Name </label>
-                    <input type="text" id="inputName" name="InputName" placeholder="Bladimir" />
+                    <input type="text" id="inputName" name="InputName" />
                 </div>
                 <div class="form-group">
                     <label id="labelLastName" for="InputLastName"> Last Name </label>
-                    <input type="text" id="InputLastName" name="InputLastName" placeholder="Arroyo" />
+                    <input type="text" id="InputLastName" name="InputLastName" />
 
                 </div>
             </div>
@@ -57,7 +63,7 @@
 
                 <div class="form-group">
                     <label id="labelEmail" for="Email"> First Name </label>
-                    <input type="text" id="Email" name="Email" placeholder="bladimir.ab@gmail.com" />
+                    <input type="text" id="Email" name="Email" />
                 </div>
 
             </div>
@@ -75,46 +81,62 @@
                 </div>
             </div>
 
-            <div class="form-row">
+            <div class="form-group">
+                <label for="cedula">ID</label>
+                <input type="text" id="cedula" name="cedula" required>
+            </div>
 
+            <div class="form-row">
                 <div class="form-group">
-                    <label id="labelAdress" for="Adress"> Adress </label>
-                    <input type="text" id="Adress" name="Adress" placeholder="2km Norte" />
+                    <label for="fecha">Date birthday</label>
+                    <input type="date" id="fecha" name="fecha" max="2025-08-24">
                 </div>
 
+
+                <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone" required>
+                </div>
             </div>
-            <div id="Countries">
+
+            <label id="vehicle">Vehicle Details</label>
+
+            <div id="vehicle-Details">
+
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="country">Country</label>
-                        <select id="country" name="country" required>
-                            <option value="" disabled selected hidden>Select a country</option>
-                            <option value="Costa Rica" selected>Costa Rica</option>
-                            <option value="Panama">Panama</option>
-                            <option value="Nicaragua">Nicaragua</option>
-                            <option value="USA">United States</option>
+                        <label for="marca">Make</label>
+                        <select id="marca" name="marca" required>
+                            <option value="Nissan">Nissan</option>
+                            <option value="Toyota">Toyota</option>
+                            <option value="Hyundai">Hyundai</option>
+                            <option value="Kia">Kia</option>
+                            <option value="Mazda">Mazda</option>
+                            <option value="Honda">Honda</option>
+                            <option value="Chevrolet">Chevrolet</option>
+                            <option value="Ford">Ford</option>
                         </select>
+
                     </div>
 
                     <div class="form-group">
-                        <label id="labelState" for="InputState">State</label>
-                        <input type="text" id="InputState" name="InputState" />
+                        <label for="model">Model</label>
+                        <input type="text" id="model" name="carModel" placeholder="Car model" required>
+
                     </div>
-                </div>
-            </div>
 
+                    <div class="form-group">
+                        <label for="year">Year</label>
+                        <input type="number" id="year" name="year" min="1" value="2020" required>
+                    </div>
 
-            <div class="form-row">
-
-                <div class="form-group">
-                    <label id="labelCity" for="InputCity"> City </label>
-                    <input type="text" id="InputCity" name="InputCity" />
-                </div>
-                <div class="form-group">
-                    <label id="labelPhone" for="InputPhone"> Phone Number </label>
-                    <input type="text" id="InputPhone" name="InputPhone" />
+                    <div class="form-group">
+                        <label for="placa">Licence</label>
+                        <input type="text" id="placa" name="placa" required>
+                    </div>
 
                 </div>
+
             </div>
 
 
