--- a/registro.html
+++ b/registro.html
@@ -55,31 +55,16 @@
             </div>
 
             <div class="form-group">
-                <label for="address">Address</label>
-                <input type="text" id="address" name="address" required>
+                <label for="cedula">ID</label>
+                <input type="text" id="cedula" name="cedula" required>
             </div>
 
             <div class="form-row">
                 <div class="form-group">
-                    <label for="country">Country</label>
-                    <select id="country" name="country" required>
-                        <option value="">Select Country</option>
-                        <option value="CR">Costa Rica</option>
-                        <option value="US">USA</option>
-                    </select>
+                    <label for="fecha">Date birthday</label>
+                    <input type="date" id="fecha" name="fecha" max="2025-08-24">
                 </div>
 
-                <div class="form-group">
-                    <label for="state">State</label>
-                    <input type="text" id="state" name="state" required>
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="city">City</label>
-                    <input type="text" id="city" name="city" required>
-                </div>
 
                 <div class="form-group">
                     <label for="phone">Phone Number</label>
@@ -89,7 +74,7 @@
 
             <div class="form-links">
                 <p>Already an user? <a href="index.html">Login here</a></p>
-                <p>Register as driver? <a href="#">Click here</a></p>
+                <p>Register as driver? <a href="registroDriver.html">Click here</a></p>
             </div>
 
             <button type="submit" class="btn-submit">Sign Up</button>
