--- a/rideDetails.html
+++ b/rideDetails.html
@@ -6,6 +6,7 @@
     <title>Proyecto 01</title>
     <link rel="stylesheet" href="CSS/stylesRideDetails.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <script src="JS/rideDetails.js"></script>
 
 
 </head>
@@ -20,58 +21,39 @@
         <nav id="Navegacion">
             <ul class="menuPrincipal">
                 <li><a href="searchRides.html">Home</a></li>
-                <li class="activo"> <a href="myRides.html">Rides</a></li>
-                <li><a href="bookings.html">Bookings</a></li>
+                <li> <a href="myRides.html">Rides</a></li>
+                <li class="activo"><a href="bookings.html">Bookings</a></li>
             </ul>
 
             <div class="accionesAdicionales">
                 <input type="text" id="search" placeholder="Search..." />
-                <img src="imagenes/usuario.png" alt="Foto perfil" class="perfil" />
+                <div class="dropdown">
+                    <img src="imagenes/usuario.png" alt="User" onclick="toggleMenu()">
+                    <div id="userMenu" class="dropdown-content">
+                        <a href="editProfile.html">Profile</a>
+                        <a href="configuration.html">Configuration</a>
+                        <a href="#" onclick="logout()">Log out</a>
+                    </div>
+                </div>
             </div>
-
-
         </nav>
     </header>
 
     <main class="rides-container">
 
-        <div id="userOptions">
-            <table id="options">
-                <tbody>
-                    <tr>
-                        <td>
-                            <a href="index.html">Logout</a>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="editProfile.html">Profile</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="configuration.html">Configuration</a>
-                        </td>
-
-                    </tr>
-
-            </table>
-        </div>
-
         <h1>Ride Details</h1>
 
         <img id="fotoPerfil" alt="Tu foto de perfil" src="imagenes/usuario.png" />
-        <h3 id="nombreUsuario">barroyo</h3>
+        <h3 id="nombreUsuario"></h3>
 
         <div class="departureForm">
             <div class="box">
                 <h3>Departure from</h3>
-                <p class="info">Quesada</p>
+                <p id="departure">Quesada</p>
             </div>
             <div class="box">
                 <h3>Arrive to</h3>
-                <p class="info">Zarcero</p>
+                <p id="arrive">Zarcero</p>
             </div>
         </div>
 
@@ -79,31 +61,31 @@
         <label for="date" id="Labeldays">Days</label>
         <div class="days">
 
-            <label><input type="checkbox" name="days" value="Mon" checked> Mon</label>
-            <label><input type="checkbox" name="days" value="Tue" checked> Tue</label>
-            <label><input type="checkbox" name="days" value="Wed" checked> Wed</label>
-            <label><input type="checkbox" name="days" value="Thu" checked> Thu</label>
-            <label><input type="checkbox" name="days" value="Fri" checked> Fri</label>
-            <label><input type="checkbox" name="days" value="Sat" checked> Sat</label>
-            <label><input type="checkbox" name="days" value="Sun" checked> Sun</label>
+            <label><input type="checkbox" name="days" value="Mon" disabled> Mon</label>
+            <label><input type="checkbox" name="days" value="Tue" disabled> Tue</label>
+            <label><input type="checkbox" name="days" value="Wed" disabled> Wed</label>
+            <label><input type="checkbox" name="days" value="Thu" disabled> Thu</label>
+            <label><input type="checkbox" name="days" value="Fri" disabled> Fri</label>
+            <label><input type="checkbox" name="days" value="Sat" disabled> Sat</label>
+            <label><input type="checkbox" name="days" value="Sun" disabled> Sun</label>
         </div>
 
 
 
         <div class="form-row">
             <div class="form-group">
-                <label for="time">Time</label>
-                <input type="time" id="time" name="time" value="10:00" required>
+                <label for="time">Time:</label>
+                <input type="time" id="time" name="time" readonly>
             </div>
 
             <div class="form-group">
-                <label for="seats" id="seats">Seats</label>
-                <input type="number" id="seats" name="seats" min="1" value="2" required>
+                <label for="seats">Seats:</label>
+                <input type="number" id="seats" name="seats" readonly>
             </div>
 
             <div class="form-group">
-                <label for="fee">Fee</label>
-                <input type="number" id="fee" name="fee" placeholder="0.00" step="0.01" value="15" required>
+                <label for="fee">Fee:</label>
+                <input type="number" id="fee" name="fee" readonly>
             </div>
         </div>
 
@@ -115,28 +97,19 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="marca">Make</label>
-                    <select id="marca" name="marca" required>
-                        <option value="Nissan">Nissan</option>
-                        <option value="Toyota">Toyota</option>
-                        <option value="Hyundai">Hyundai</option>
-                        <option value="Kia">Kia</option>
-                        <option value="Mazda">Mazda</option>
-                        <option value="Honda">Honda</option>
-                        <option value="Chevrolet">Chevrolet</option>
-                        <option value="Ford">Ford</option>
-                    </select>
-
+                    <input id="marca" name="marca" readonly>
+                     
                 </div>
 
                 <div class="form-group">
                     <label for="model">Model</label>
-                    <input type="text" id="model" name="carModel" placeholder="Car model" value="March" required>
+                    <input type="text" id="model" name="carModel" readonly>
 
                 </div>
 
                 <div class="form-group">
-                    <label for="arrive">Year</label>
-                    <input type="number" id="arrive" name="arrive" min="1" value="2020" required>
+                    <label for="year">Year</label>
+                    <input type="text" id="year" name="year" readonly>
 
                 </div>
             </div>
@@ -144,8 +117,8 @@
         </div>
 
         <div class="form-actions">
-            <a href="myRides.html">Cancel</a>
-            <button type="submit">Request</button>
+            <a href="searchRides.html">Cancel</a>
+            <button type="button" id="requestBtn">Request</button>
         </div>
 
 
