Documentacion apropiada de codigo

--- a/NewRide.html
+++ b/NewRide.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <label for="date" id="Labeldays">Days</label>
+            <label id="Labeldays">Days</label>
             <div class="days">
 
                 <label><input type="checkbox" name="days" value="Mon" checked> Mon</label>
