--- a/configuration.html
+++ b/configuration.html
@@ -59,7 +59,7 @@
 
             <div class="form-actions">
                 <a href="searchRides.html">Cancel</a>
-                <button type="submit" href="searchRides.html">Save</button> 
+                <button type="submit">Save</button>
             </div>
 
         </form>
