--- a/registroDriver.html
+++ b/registroDriver.html
@@ -80,6 +80,7 @@
                     <div class="form-group">
                         <label for="marca">Make</label>
                         <select id="marca" name="marca" required>
+                            <option value="" disabled selected>Select a make</option>
                             <option value="Nissan">Nissan</option>
                             <option value="Toyota">Toyota</option>
                             <option value="Hyundai">Hyundai</option>
