--- a/rideDetails.html
+++ b/rideDetails.html
@@ -44,7 +44,7 @@
         <h1>Ride Details</h1>
 
         <img id="fotoPerfil" alt="Tu foto de perfil" src="imagenes/usuario.png" />
-        <h3 id="nombreUsuario"></h3>
+        <h3 id="nombreUsuario">Nombre</h3>
 
         <div class="departureForm">
             <div class="box">
@@ -58,7 +58,7 @@
         </div>
 
 
-        <label for="date" id="Labeldays">Days</label>
+        <label id="Labeldays">Days</label>
         <div class="days">
 
             <label><input type="checkbox" name="days" value="Mon" disabled> Mon</label>
