--- a/EditRide.html
+++ b/EditRide.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <label for="date" id="Labeldays">Days</label>
+            <label id="Labeldays">Days</label>
             <div class="days">
 
                 <label><input type="checkbox" name="days" value="Mon" checked> Mon</label>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="seats" id="seats">Seats</label>
+                    <label for="seats" id="seatsLabel">Seats</label>
                     <input type="number" id="seats" name="seats" min="1" value="2" required>
                 </div>
 
@@ -92,8 +92,9 @@
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="make">Make</label>
-                        <select id="make" name="make" required>
+                        <label for="marca">Make</label>
+                        <select id="marca" name="marca" required>
+                            <option value="" disabled selected>Select a make</option>
                             <option value="Nissan">Nissan</option>
                             <option value="Toyota">Toyota</option>
                             <option value="Hyundai">Hyundai</option>
